--- a/ENTITIES/DATE.ipynb
+++ b/ENTITIES/DATE.ipynb
@@ -71,20 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-10-16 23:41:47.121698\n",
-      "<type 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if '지금' in TIME.keys():\n",
     "    offset = TIME['지금']\n",
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +181,7 @@
     "    # needThese에 명시된 엔터티 딕셔너리 불러오기\n",
     "    # entities 검사기는 needThese에 따라 on/off 하듯이?\n",
     "    for w, t in disintegrated_sentence: \n",
-    "        numflag, entities = ent_time(w,t,numflag,entities,sentence)\n",
+    "        numflag, entities = ent_date(w,t,numflag,entities,sentence)\n",
     "    \n",
     "        \n",
     "        if t not in ['Eomi', 'Josa', 'Number', 'KoreanParticle', 'Punctuation']:            \n",
@@ -201,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "수지의 2016-10-18 날씨는 맑아요!\n"
+      "수지의 2016-10-29 날씨는 비가 오네요..\n"
      ]
     }
    ],
@@ -283,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "수지의 2016-10-18 날씨는 비가 오네요..\n"
+      "수지의 2016-10-30 날씨는 비가 오네요..\n"
      ]
     }
    ],
@@ -300,24 +291,6 @@
     "sentence, ent = disintegrate('내일 날씨 좀 알려줘',['DATE']) # DAY 단위로만,,,,\n",
     "pprint(getWeather(ent,'수지'))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# 장소"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
