connects with flask

--- a/INTENTS/getWeather.ipynb
+++ b/INTENTS/getWeather.ipynb
@@ -35,6 +35,7 @@
    },
    "outputs": [],
    "source": [
+    "# coding: utf-8\n",
     "from __future__ import unicode_literals\n",
     "import os\n",
     "import pickle\n",
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +109,7 @@
     "        # 이 result를 보내고 답이 올 때까지 대기한다?\n",
     "        # 그렇다면 이 대답을 기다릴 때는 IntentClassifier 안거치고 일로 바로 오도록 해야하네?\n",
     "        result = raw_input().decode('utf-8')   # 임시\n",
-    "        \n",
+    "        #result = raw_input().decode(sys.stdin.encoding)\n",
     "    else: # 엔티티 객체가 아니라면 대답인걸로 간주! (stack 메모리 뒤져서 일로 답을 보낸다)\n",
     "        result = entType\n",
     "        \n",
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +215,7 @@
     "    base_url = \"http://www.kma.go.kr/wid/queryDFS.jsp\"\n",
     "    rsd = dfs_ll2xy(lat, lon)\n",
     "    url = base_url + '?gridx=' + str(rsd['x']) + '&gridy=' + str(rsd['y'])\n",
-    "    u = urlopen(url)\n",
+    "    u = urllib2.urlopen(url)\n",
     "    wdata = []\n",
     "    try:\n",
     "        data = u.read()\n",
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -266,6 +267,7 @@
     "        # 계속 엉뚱한 대답해대면 예를 들어 3번동안, 모르겠다고 출력하고 종료\n",
     "        \n",
     "    gridX, gridY = gridxy(location)\n",
+    "    print gridX, gridY\n",
     "    if gridX =='ERROR': return '그곳이 어디죠..?'\n",
     "    else: \n",
     "        weather = parseWeather(gridX,gridY)\n",
@@ -275,9 +277,9 @@
     "        if temp_date > 0: \n",
     "            _date+=datetime.timedelta(days=temp_date)\n",
     "            if temp_date == 1:\n",
-    "                weather = [x for x in weather[0] if x[1]==1]\n",
+    "                weather = [x for x in weather if x[1]=='1']\n",
     "            elif temp_date >= 2:\n",
-    "                weather = [x for x in weather[0] if x[1]==2]\n",
+    "                weather = [x for x in weather if x[1]=='2']\n",
     "                \n",
     "        else: \n",
     "            _date-=datetime.timedelta(days=abs(temp_date))\n",
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -303,16 +305,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "위치는요?\n",
-      "똥꼬\n",
-      "그곳이 어디죠..?\n"
+      "어디요?\n",
+      "서울\n",
+      "37.566535 126.9779692\n",
+      "서울의 2016-11-09 날씨는 맑음이고 기온은 -1.0, 강수확률은 0 퍼센트 입니다.\n"
      ]
     }
    ],
    "source": [
-    "sentence, ent = disintegrate('오늘 날씨 좀 알려줘',['DATE']) # DAY 단위로만,,,,\n",
+    "sentence, ent = disintegrate('내일 날씨 어때?',['DATE']) # DAY 단위로만,,,,\n",
     "pprint(getWeather(ent))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
